Add RecipeSerializer, move PlainText to rewrite-core main source, cut cyclic dep between rewrite-core/test